Avance clase simulator hasta user_input + corrección de error ortografico tannis-tannins

--- a/notebooks/EDA/01_null_analysis.ipynb
+++ b/notebooks/EDA/01_null_analysis.ipynb
@@ -1833,7 +1833,7 @@
    "id": "e6f84efc",
    "metadata": {},
    "source": [
-    "_alcohol, tannis, sweetness_"
+    "_alcohol, tannins, sweetness_"
    ]
   },
   {
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "afc23c05",
    "metadata": {},
    "outputs": [
@@ -2228,7 +2228,7 @@
     "          \"Roussanne\", \"Sangiovese\", \"Sauvignon Blanc\", \"Shiraz/Syrah\", \"Sémillon\",\n",
     "          \"Tannat\", \"Tempranillo\", \"Torrontés\", \"Trousseau\", \"Verdejo\", \"Viognier\"]\n",
     "\n",
-    "wines_clean = impute_taste(wines_clean, grapes, [\"alcohol\", \"tannis\", \"sweetness\"])\n",
+    "wines_clean = impute_taste(wines_clean, grapes, [\"alcohol\", \"tannins\", \"sweetness\"])\n",
     "\n",
     "# Comprobación\n",
     "pd.DataFrame(wines_clean.isna().sum(), columns=[\"nulls\"]).sort_values(\"nulls\", ascending=False).T"
