--- a/notebooks/EDA/02_descriptive_analysis.ipynb
+++ b/notebooks/EDA/02_descriptive_analysis.ipynb
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9f304e9f",
    "metadata": {},
    "outputs": [
@@ -1554,12 +1554,12 @@
     }
    ],
    "source": [
-    "pd.DataFrame(wines[[\"body\", \"tannis\", \"sweetness\", \"acidity\"]].describe().T)"
+    "pd.DataFrame(wines[[\"body\", \"tannins\", \"sweetness\", \"acidity\"]].describe().T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d3af7e97",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1605,7 @@
     }
    ],
    "source": [
-    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "taste_columns = [\"body\", \"tannins\", \"sweetness\", \"acidity\"]\n",
     "\n",
     "for column in taste_columns:\n",
     "\n",
