--- a/notebooks/EDA/03_relationship_analysis.ipynb
+++ b/notebooks/EDA/03_relationship_analysis.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c076b435",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,7 @@
     "# https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html\n",
     "\n",
     "# Correlación de pearson con rating:\n",
-    "wine_features = [\"rating\", \"year\", \"rating_qty\", \"price\", \"body\", \"tannis\", \"sweetness\", \"acidity\", \"alcohol\"]\n",
+    "wine_features = [\"rating\", \"year\", \"rating_qty\", \"price\", \"body\", \"tannins\", \"sweetness\", \"acidity\", \"alcohol\"]\n",
     "\n",
     "corr_features = wines[wine_features].corr()\n",
     "\n",
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "fb7bec5f",
    "metadata": {},
    "outputs": [
@@ -2702,7 +2702,7 @@
     "\n",
     "tastes_dict = {\n",
     "    \"body\": \"body_scld\",\n",
-    "    \"tannis\": \"tannis_scld\",\n",
+    "    \"tannins\": \"tannins_scld\",\n",
     "    \"sweetness\": \"sweetness_scld\",\n",
     "    \"acidity\": \"acidity_scld\"\n",
     "}\n",
@@ -2978,7 +2978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d0eb7c6f",
    "metadata": {},
    "outputs": [
@@ -2996,7 +2996,7 @@
    "source": [
     "tastes_dict = {\n",
     "    \"body\": \"body_scld\",\n",
-    "    \"tannis\": \"tannis_scld\",\n",
+    "    \"tannins\": \"tannins_scld\",\n",
     "    \"sweetness\": \"sweetness_scld\",\n",
     "    \"acidity\": \"acidity_scld\"\n",
     "}\n",
@@ -3110,7 +3110,7 @@
     "\n",
     "> - Body: muy relacionado a notas amaderadas (oaky) y de frutos negros. Relacionado negativamente en notas cítricas, tropicales y derivados.\n",
     "\n",
-    "> - Tannis: relación más pareja, destacando con sabores especiados (spices) y con frutos rojos (negativamente).\n",
+    "> - tannins: relación más pareja, destacando con sabores especiados (spices) y con frutos rojos (negativamente).\n",
     "\n",
     "> - Sweetness: relacionado a frutos negros y notas amaderadas (oaky), mientras que contrario a sabores de tipo cítricos y derivados.\n",
     "\n",
@@ -3119,7 +3119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "ea80efbf",
    "metadata": {},
    "outputs": [
@@ -3138,7 +3138,7 @@
     "# En este caso aplicamos matriz de correlación, ya que son dos valores float\n",
     "tastes_dict = {\n",
     "    \"body\": \"body_scld\",\n",
-    "    \"tannis\": \"tannis_scld\",\n",
+    "    \"tannins\": \"tannins_scld\",\n",
     "    \"sweetness\": \"sweetness_scld\",\n",
     "    \"acidity\": \"acidity_scld\"\n",
     "}\n",
@@ -3183,7 +3183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f20f869f",
    "metadata": {},
    "outputs": [
@@ -3229,7 +3229,7 @@
     }
    ],
    "source": [
-    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "taste_columns = [\"body\", \"tannins\", \"sweetness\", \"acidity\"]\n",
     "\n",
     "for column in taste_columns:\n",
     "\n",
