--- a/notebooks/etl_draft.ipynb
+++ b/notebooks/etl_draft.ipynb
@@ -330,7 +330,7 @@
     "- **`year`**: existen vinos sin año que traen el dato \"N.V.\". Los pasamos a NaN.\n",
     "- **`rating_qty`**: cuando los vinos no tienen suficientes ratings, los basan en los vinos de otros años. En este caso, los pasamos a NaN.\n",
     "\n",
-    "2. **`Tastes + Alcohol`**: convierte las columnas **`[body, tannis, sweetness, acidity, alcohol]`** en decimales.\n",
+    "2. **`Tastes + Alcohol`**: convierte las columnas **`[body, tannins, sweetness, acidity, alcohol]`** en decimales.\n",
     "\n",
     "3. **`Diccionarios`**: transforma la columna **`{notes}`** a formato tipo *one-hot* normalizado, donde la suma de todas las notas de un vino da 1.\n",
     "\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
     "\n",
     "winesdf_taste = winesdf_dtypes.copy()\n",
     "\n",
-    "columns_to_convert = ['body', 'tannis', 'sweetness', 'acidity', 'alcohol']\n",
+    "columns_to_convert = ['body', 'tannins', 'sweetness', 'acidity', 'alcohol']\n",
     "for col in columns_to_convert:\n",
     "    winesdf_taste[col] = winesdf_taste[col].apply(clean_and_convert_tastes)\n",
     "\n",
