--- a/notebooks/models_draft.ipynb
+++ b/notebooks/models_draft.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "b53585c2",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1362,7 @@
     "    \"precio_max\": 100,\n",
     "    \"tastes\": {\n",
     "        \"body\": 0.1,\n",
-    "        \"tannis\": 0.1,\n",
+    "        \"tannins\": 0.1,\n",
     "        \"sweetness\": 0.5,\n",
     "        \"acidity\": 0.1\n",
     "    }\n",
@@ -1384,7 +1384,7 @@
     "# User similarity (Euclidean Distances)\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "taste_features = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "taste_features = [\"body\", \"tannins\", \"sweetness\", \"acidity\"]\n",
     "scaled_tastes = [taste + \"_scld\" for taste in taste_features]\n",
     "\n",
     "wine_base[scaled_tastes] = scaler.fit_transform(wine_base[taste_features])\n",
