--- a/notebooks/scraper_draft.ipynb
+++ b/notebooks/scraper_draft.ipynb
@@ -165,7 +165,7 @@
     "wine_df[\"rating_qty\"] = None\n",
     "wine_df[\"price\"] = None\n",
     "wine_df[\"body\"] = None\n",
-    "wine_df[\"tannis\"] = None\n",
+    "wine_df[\"tannins\"] = None\n",
     "wine_df[\"sweetness\"] = None\n",
     "wine_df[\"acidity\"] = None\n",
     "wine_df[\"notes\"] = None\n",
@@ -254,7 +254,7 @@
     "        wine_taste = soup.find_all(\"tr\", {\"class\": \"tasteStructure__tasteCharacteristic--jLtsE\"})\n",
     "\n",
     "        body = None\n",
-    "        tannis = None\n",
+    "        tannins = None\n",
     "        sweetness = None\n",
     "        acidity = None\n",
     "\n",
@@ -268,9 +268,9 @@
     "            if name == \"Light\":\n",
     "                body = val\n",
     "            \n",
-    "            # 6.2 : Smooth/Tannic - Tannis (Tanicidad)\n",
+    "            # 6.2 : Smooth/Tannic - tannins (Tanicidad)\n",
     "            elif name == \"Smooth\":\n",
-    "                tannis = val\n",
+    "                tannins = val\n",
     "            \n",
     "            # 6.3 : Dry/Sweet - Sweetness (Dulzura)\n",
     "            elif name == \"Dry\":\n",
@@ -281,7 +281,7 @@
     "                acidity = val\n",
     "    except:\n",
     "        body = None\n",
-    "        tannis = None\n",
+    "        tannins = None\n",
     "        sweetness = None\n",
     "        acidity = None\n",
     "\n",
@@ -351,7 +351,7 @@
     "    wine_df.at[index, \"rating_qty\"] = rating_qty\n",
     "    wine_df.at[index, \"price\"] = price\n",
     "    wine_df.at[index, \"body\"] = body\n",
-    "    wine_df.at[index, \"tannis\"] = tannis\n",
+    "    wine_df.at[index, \"tannins\"] = tannins\n",
     "    wine_df.at[index, \"sweetness\"] = sweetness\n",
     "    wine_df.at[index, \"acidity\"] = acidity\n",
     "    wine_df.at[index, \"notes\"] = mentions_dict\n",
