--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Me gustaría que el usuario me de:\n",
     "- Pairings: uno o más combinaciones de alimentos con los que quiere maridar el vino. (OK)\n",
-    "- Body, tannis, sweetness, acidity: de 0 a 1 (OK)\n",
+    "- Body, tannins, sweetness, acidity: de 0 a 1 (OK)\n",
     "- Uvas: una selección de uvas que yo determine + otras (todas las que no estén incluidas dentro de las que le doy como opción individual). (OK)\n",
     "- Price: el rango de precios en el cual buscar vinos. (OK)\n",
     "\n",
@@ -345,7 +345,7 @@
     "\n",
     "    if len(wine_base) > 0:\n",
     "        # User similarity (Fuzzy Distance)\n",
-    "        scaled_tastes = [\"body_scld\", \"tannis_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
+    "        scaled_tastes = [\"body_scld\", \"tannins_scld\", \"sweetness_scld\", \"acidity_scld\"]\n",
     "        wine_base = df_add_user_similarity(wine_base, scaled_tastes, user_tastes)\n",
     "\n",
     "        # Puntaje sintético local del vino\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "41a09354",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
     "grape_selection = wines_df[grapes]\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
+    "taste_columns = [\"body\", \"tannins\", \"sweetness\", \"acidity\"]\n",
     "scld_taste_columns = [taste + \"_scld\" for taste in taste_columns]\n",
     "\n",
     "wines_copy = wines_df.copy()\n",
@@ -514,7 +514,7 @@
     "    \"precio_max\": selected_price_range[1],\n",
     "    \"tastes\": {\n",
     "        \"body\": selected_profile[\"body_scld\"][1],\n",
-    "        \"tannis\": selected_profile[\"tannis_scld\"][1],\n",
+    "        \"tannins\": selected_profile[\"tannins_scld\"][1],\n",
     "        \"sweetness\": selected_profile[\"sweetness_scld\"][1],\n",
     "        \"acidity\": selected_profile[\"acidity_scld\"][1]\n",
     "    },\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "187a74d1",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
    "source": [
     "top_grapes = list(get_top_grapes(grape_selection, 8).index)\n",
     "\n",
-    "tra_wines = df_add_scaled_tastes(wines_df, [\"body\", \"tannis\", \"sweetness\", \"acidity\"])\n",
+    "tra_wines = df_add_scaled_tastes(wines_df, [\"body\", \"tannins\", \"sweetness\", \"acidity\"])\n",
     "\n",
     "tra_wines = df_add_other_grapes(tra_wines, grape_selection, top_grapes)\n",
     "\n",
@@ -598,7 +598,7 @@
     "else:\n",
     "    display_columns = [\n",
     "    \"name\", \"year\", \"price\", \"rating\",\n",
-    "    \"rating_qty\", \"body_scld\", \"tannis_scld\",\n",
+    "    \"rating_qty\", \"body_scld\", \"tannins_scld\",\n",
     "    \"sweetness_scld\", \"acidity_scld\", \"rating_zscore\",\n",
     "    \"price_zscore\", \"zscore_quality_price_scld\", \"user_similarity\", \"wine_score_scld_gbl\", \"wine_score_scld\"]\n",
     "    print(selected_wine[display_columns])\n",
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b0ac5f36",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1408,7 @@
    "source": [
     "p = { \n",
     "    \"body\": selected_profile[\"body_scld\"],\n",
-    "    \"tannis\": selected_profile[\"tannis_scld\"],\n",
+    "    \"tannins\": selected_profile[\"tannins_scld\"],\n",
     "    \"sweetness\": selected_profile[\"sweetness_scld\"],\n",
     "    \"acidity\": selected_profile[\"acidity_scld\"]\n",
     "}\n",
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3aa76cd5",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
     }
    ],
    "source": [
-    "tra_wines[tra_wines[main_pairing]==1][[\"body_scld\",\"tannis_scld\",\"sweetness_scld\",\"acidity_scld\"]].quantile([0, .25, .5, .75, 1])"
+    "tra_wines[tra_wines[main_pairing]==1][[\"body_scld\",\"tannins_scld\",\"sweetness_scld\",\"acidity_scld\"]].quantile([0, .25, .5, .75, 1])"
    ]
   },
   {
