--- a/src/models/user_simulator_draft.ipynb
+++ b/src/models/user_simulator_draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "45be0042",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, wine_df: pd.DataFrame, meals_df: pd.DataFrame,\n",
-    "                 pairing_cols: List[str], taste_cols: List[str],\n",
+    "                 pairing_cols: List[str], taste_cols: List[str], grape_cols: List[str],\n",
     "                 weights: Dict[str, float], top_n: int = 20):\n",
     "        \"\"\"\n",
     "        Constructor: inicializa la clase con los datos base.\n",
@@ -46,6 +46,7 @@
     "        self.meals_df = meals_df.copy()\n",
     "        self.pairing_cols = pairing_cols\n",
     "        self.taste_cols = taste_cols\n",
+    "        self.grape_cols = grape_cols\n",
     "        self.weights = weights\n",
     "        self.top_n = top_n\n",
     "        self.scaler = MinMaxScaler()\n",
@@ -61,14 +62,35 @@
     "        # Perfiles de pairing (cuantiles y stds por pairing y taste)\n",
     "        self._taste_profiles, self._taste_deviations = self._build_pairing_profile()\n",
     "\n",
-    "    def generate_user_profile(self) -> Dict:\n",
+    "    def generate_user_input(self) -> Dict:\n",
     "        \"\"\"\n",
-    "        Genera un perfil sintético de usuario (gustos, pairing, uvas, etc.)\n",
+    "        Genera un input sintético de usuario (gustos, pairing, uvas, etc.)\n",
     "\n",
     "        Returns:\n",
     "        - Diccionario con los parámetros preferidos por el usuario.\n",
     "        \"\"\"\n",
-    "        pass  # <-- Acá vas a pegar tu función de generación de inputs aleatorios del usuario\n",
+    "        selected_meal = self._select_random_meal()\n",
+    "        selected_grapes = self._select_grapes()\n",
+    "        selected_price_range = self._select_price_range()\n",
+    "        selected_profile = self._select_taste_profile(selected_meal.get(\"main_pairing\"))\n",
+    "\n",
+    "        user_input = {\n",
+    "            \"meal\": selected_meal[\"meal\"],\n",
+    "            \"main_pairing\": selected_meal[\"main_pairing\"],\n",
+    "            \"pairing_list\": selected_meal[\"pairing_list\"],\n",
+    "            \"grape_list\": selected_grapes,\n",
+    "            \"precio_min\": selected_price_range[0],\n",
+    "            \"precio_max\": selected_price_range[1],\n",
+    "            \"tastes\": {\n",
+    "                \"body\": selected_profile[\"body_scld\"][1],\n",
+    "                \"tannins\": selected_profile[\"tannins_scld\"][1],\n",
+    "                \"sweetness\": selected_profile[\"sweetness_scld\"][1],\n",
+    "                \"acidity\": selected_profile[\"acidity_scld\"][1]\n",
+    "            },\n",
+    "            \"weights\": self.weights\n",
+    "        }\n",
+    "\n",
+    "        return user_input\n",
     "\n",
     "\n",
     "    def _build_pairing_profile(self, quantiles=[0, .25, .5, .75, 1]) -> Tuple[Dict, Dict]:\n",
@@ -107,21 +129,25 @@
     "\n",
     "        Returns:\n",
     "        - Dict con:\n",
-    "            - meal (pd.Series): la comida completa (ingredientes, columnas one-hot).\n",
+    "            - complete_meal (pd.Series): la comida completa (ingredientes, columnas one-hot).\n",
+    "            - meal (str): el nombre de la comida.\n",
     "            - main_pairing (str): ingrediente principal en lowercase.\n",
     "            - pairing_list (List[str]): lista de pairings que tienen valor 1.\n",
     "        \"\"\"\n",
     "        i = np.random.randint(0, len(self.meals_df))\n",
-    "        selected_meal = self.meals_df.loc[i]\n",
+    "        complete_meal = self.meals_df.loc[i]\n",
     "\n",
-    "        main_pairing = selected_meal[\"Ingrediente Principal\"].lower()\n",
+    "        meal = complete_meal[\"Comida\"]\n",
+    "\n",
+    "        main_pairing = complete_meal[\"Ingrediente Principal\"].lower()\n",
     "\n",
     "        # Excluye las 2 primeras columnas: \"Comida\" e \"Ingrediente Principal\"\n",
-    "        one_hot = selected_meal[2:]\n",
+    "        one_hot = complete_meal[2:]\n",
     "        pairing_list = list(one_hot.index[one_hot > 0])\n",
     "\n",
     "        return {\n",
-    "            \"meal\": selected_meal,\n",
+    "            \"complete_meal\": complete_meal,\n",
+    "            \"meal\": meal,\n",
     "            \"main_pairing\": main_pairing,\n",
     "            \"pairing_list\": pairing_list\n",
     "        }\n",
@@ -195,8 +221,7 @@
     "        raise ValueError(f\"Passed value is less than zero! {value}\")\n",
     "\n",
     "\n",
-    "    # Selección de uvas según probabilidad de uva en dataset\n",
-    "    def _select_grapes(self, grapes_df: pd.DataFrame,\n",
+    "    def _select_grapes(self,\n",
     "                       top_n_grapes: int = 8,\n",
     "                       min_grapes: int = 1,\n",
     "                       max_grapes: int = 4) -> List[str]:\n",
@@ -204,7 +229,6 @@
     "        Selecciona aleatoriamente un set de uvas según su frecuencia en el dataset.\n",
     "\n",
     "        Args:\n",
-    "        - grapes_df: dataframe con columnas de uvas (one-hot encoded).\n",
     "        - top_n_grapes: cuántas uvas populares considerar (resto = Otras Uvas).\n",
     "        - min_grapes: cantidad mínima de uvas a seleccionar.\n",
     "        - max_grapes: cantidad máxima de uvas a seleccionar.\n",
@@ -212,6 +236,7 @@
     "        Returns:\n",
     "        - Lista de uvas seleccionadas.\n",
     "        \"\"\"\n",
+    "        grapes_df = self.wine_df[self.grape_cols]\n",
     "        top_grapes = self._get_top_grapes(grapes_df, top_n_grapes)\n",
     "        total_grapes_in_df = sum(grapes_df.sum(axis=0))\n",
     "\n",
@@ -241,9 +266,8 @@
     "        top_grapes = grapes_df.sum(axis=0).sort_values(ascending=False).head(top_n_grapes)\n",
     "        return top_grapes\n",
     "\n",
-    "    def select_price_range(\n",
+    "    def _select_price_range(\n",
     "            self,\n",
-    "            df: pd.DataFrame,\n",
     "            quantiles: List[float] = [.075, .125, .25, .375, .5, .625, .75, .875],\n",
     "            low_prices_weights: List[float] = [.2, .3, .25, .15, .05, .025, .015, 0.01, 0, 0],\n",
     "            min_dispersion: int = 2\n",
@@ -252,7 +276,6 @@
     "        Selecciona un rango de precios realista con sesgo hacia precios bajos, simulando comportamiento de usuarios reales.\n",
     "\n",
     "        Args:\n",
-    "        - df: dataframe que contiene la columna 'price'.\n",
     "        - quantiles: cuantiles a considerar para definir posibles precios.\n",
     "        - low_prices_weights: pesos para elegir precios bajos (más probabilidad al principio).\n",
     "        - min_dispersion: distancia mínima entre el precio bajo y el alto en el rango de cuantiles.\n",
@@ -260,6 +283,8 @@
     "        Returns:\n",
     "        - List [min_price, max_price] donde max_price puede ser None si no hay límite superior.\n",
     "        \"\"\"\n",
+    "        df = self.wine_df\n",
+    "\n",
     "        # Eliminación de outliers (IQR * 1.5)\n",
     "        no_outlier_price = ut.manage_outlier_IQR(df=df[\"price\"], func=\"remove\")\n",
     "        price_quantiles = no_outlier_price.quantile(quantiles)\n",
@@ -269,21 +294,20 @@
     "        price_quantiles = price_quantiles.sort_index()\n",
     "        price_quantiles = pd.Series(price_quantiles.values)\n",
     "\n",
-    "        # Selección índice de cuantil de bajo precio\n",
+    "        # Selección índice de cuantil de precio inferior\n",
     "        low_price_index = random.choices(population=range(len(price_quantiles)), weights=low_prices_weights, k=1)[0]\n",
     "\n",
-    "        \n",
+    "        # Cálculo de límite superior posible\n",
     "        high_top_limit = len(price_quantiles)\n",
-    "        high_bottom_limit = low_price_index + min_dispersion if (low_price_index + min_dispersion) < len(price_quantiles) else len(price_quantiles)-1\n",
+    "        high_bottom_limit = min(low_price_index + min_dispersion, high_top_limit-1)\n",
+    "        high_prices_possible = list(range(high_bottom_limit, high_top_limit))\n",
+    "        high_prices_weights = [1 / x**1.5 for x in high_prices_possible]\n",
     "\n",
-    "        high_price_possible = range(high_bottom_limit, high_top_limit)\n",
+    "        # Selección de índice de cuantil de precio superior\n",
+    "        high_price_index = random.choices(population=high_prices_possible, weights=high_prices_weights, k=1)[0]\n",
     "\n",
-    "        high_prices_weights = [1 / x**1.5 for x in high_price_possible]\n",
-    "\n",
-    "        high_price_index = random.choices(population=high_price_possible, weights=high_prices_weights, k=1)[0]\n",
-    "\n",
+    "        # Rango de precios\n",
     "        price_range = [int(price_quantiles[low_price_index]), int(price_quantiles[high_price_index])]\n",
-    "\n",
     "        if price_range[1] == -1:\n",
     "            price_range[1] = None\n",
     "\n",
@@ -358,17 +382,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "56d896ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Malbec']"
+       "{'meal': 'Fondue de Queso',\n",
+       " 'main_pairing': 'mature and hard cheese',\n",
+       " 'pairing_list': ['mature and hard cheese',\n",
+       "  'mild and soft cheese',\n",
+       "  'vegetarian'],\n",
+       " 'grape_list': ['Malbec'],\n",
+       " 'precio_min': 0,\n",
+       " 'precio_max': 18,\n",
+       " 'tastes': {'body': [np.float64(0.19708029197080296),\n",
+       "   np.float64(0.37956204379562053)],\n",
+       "  'tannins': [np.float64(0.4787799300511164), np.float64(0.9999999999999999)],\n",
+       "  'sweetness': [np.float64(0.32132768361581926),\n",
+       "   np.float64(0.455861581920904)],\n",
+       "  'acidity': [np.float64(0.5138228108525138), np.float64(0.5579272212935579)]},\n",
+       " 'weights': {'rating': 0.25,\n",
+       "  'price_quality': 0.25,\n",
+       "  'rating_qty': 0.1,\n",
+       "  'user_similarity': 0.3,\n",
+       "  'main_pairing': 0.1}}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,24 +421,129 @@
     "meals_df = pd.read_excel(\"../../src/data/raw/meals/Meals.xlsx\")\n",
     "pairings = pd.read_csv(\"../../src/data/processed/aux/pairings.csv\")\n",
     "pairings = list(pairings[\"pairings\"])\n",
-    "taste_columns = [\"body\", \"tannis\", \"sweetness\", \"acidity\"]\n",
-    "weights = {}\n",
+    "taste_columns = [\"body\", \"tannins\", \"sweetness\", \"acidity\"]\n",
+    "simulation_weights = {\n",
+    "    \"rating\": .25,\n",
+    "    \"price_quality\": .25,\n",
+    "    \"rating_qty\": .1,\n",
+    "    \"user_similarity\": .3,\n",
+    "    \"main_pairing\": .1\n",
+    "}\n",
     "\n",
     "# Grape Methods Input\n",
     "grapes = pd.read_csv(\"../../src/data/processed/aux/grapes.csv\")\n",
-    "grapes = grapes[\"grapes\"]\n",
-    "grapes_df = wines_df[grapes]\n",
+    "grapes = list(grapes[\"grapes\"])\n",
     "\n",
     "user = SyntheticUserSimulator(\n",
-    "    wine_df=wines_df, meals_df=meals_df, pairing_cols=pairings, taste_cols=taste_columns, weights=weights)\n",
+    "    wine_df=wines_df, meals_df=meals_df, pairing_cols=pairings, taste_cols=taste_columns, grape_cols=grapes, weights=simulation_weights)\n",
     "\n",
-    "profiles, deviations = user._build_pairing_profile()\n",
-    "\n",
-    "meal = user._select_random_meal()\n",
-    "\n",
-    "taste_profile = user._select_taste_profile(meal.get(\"main_pairing\"))\n",
-    "\n",
-    "grapes = user._select_grapes(grapes_df)\n"
+    "user.generate_user_input()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "83aadee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Barbera</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1950</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1951</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1953</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1954</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1955 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Barbera\n",
+       "0         0.0\n",
+       "1         0.0\n",
+       "2         0.0\n",
+       "3         0.0\n",
+       "4         0.0\n",
+       "...       ...\n",
+       "1950      0.0\n",
+       "1951      0.0\n",
+       "1952      0.0\n",
+       "1953      0.0\n",
+       "1954      0.0\n",
+       "\n",
+       "[1955 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wines_df[[\"Barbera\"]]"
    ]
   }
  ],
