--- a/tests/fix_logs/scraping_fix/01_scraping_fix.ipynb
+++ b/tests/fix_logs/scraping_fix/01_scraping_fix.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,8 +330,8 @@
    ],
    "source": [
     "# Validación de vinos sin taninos (OK)\n",
-    "null_tannis = wines_df[wines_df[\"tannis\"].isna()]\n",
-    "ut.save_csv(null_tannis, filename=\"null_tannis.csv\")"
+    "null_tannins = wines_df[wines_df[\"tannins\"].isna()]\n",
+    "ut.save_csv(null_tannins, filename=\"null_tannins.csv\")"
    ]
   },
   {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
     "    return pd.to_numeric(str(value)[:5].replace('%', ''), errors='coerce')\n",
     "\n",
     "# Aplicar la conversión a las columnas deseadas\n",
-    "columns_to_convert = ['body', 'tannis', 'sweetness', 'acidity']\n",
+    "columns_to_convert = ['body', 'tannins', 'sweetness', 'acidity']\n",
     "for col in columns_to_convert:\n",
     "    wines_df[col] = wines_df[col].apply(clean_and_convert)\n",
     "    pricefix_df[col] = pricefix_df[col].apply(clean_and_convert)\n",
