Avance user simulator hasta score wines

--- a/src/models/synthetic_user_draft.ipynb
+++ b/src/models/synthetic_user_draft.ipynb
@@ -19,11 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "38058a87",
    "metadata": {},
    "outputs": [],
    "source": [
+    " # TODO: corregir user_similarity, pasar a pick_wine y seguir con simulate like\n",
+    "\n",
     "import random\n",
     "import sys\n",
     "import os\n",
